@@ -2,12 +2,13 @@
 <form>
 	<fields name="params">
 		<fieldset name="params" label="COM_USERS_SETTINGS_FIELDSET_LABEL">
-			<field name="language" type="language" 
+			<field name="language" type="language"
 				client="site"
 				description="COM_USERS_USER_FIELD_FRONTEND_LANGUAGE_DESC"
 				label="COM_USERS_USER_FIELD_FRONTEND_LANGUAGE_LABEL"
 				required="true"
 				filter="cmd"
+				default="active"
 			/>
 		</fieldset>
 	</fields>
