@@ -41,6 +41,7 @@ class JFormFieldLanguage extends JFormFieldList
 	{
 		// Initialize some field attributes.
 		$client = (string) $this->element['client'];
+
 		if ($client != 'site' && $client != 'administrator')
 		{
 			$client = 'site';
@@ -51,6 +52,32 @@ class JFormFieldLanguage extends JFormFieldList
 			parent::getOptions(),
 			JLanguageHelper::createLanguageList($this->value, constant('JPATH_' . strtoupper($client)), true, true)
 		);
+
+		// Set the default value active language
+		if ($langParams = JComponentHelper::getParams('com_languages'))
+		{
+			switch ((string) $this->value)
+			{
+				case 'site':
+				case 'frontend':
+				case '0':
+					$this->value = $langParams->get('site', 'en-GB');
+					break;
+				case 'admin':
+				case 'administrator':
+				case 'backend':
+				case '1':
+					$this->value = $langParams->get('administrator', 'en-GB');
+					break;
+				case 'active':
+				case 'auto':
+					$lang = JFactory::getLanguage();
+					$this->value = $lang->getTag();
+					break;
+				default:
+				break;
+			}
+		}
 
 		return $options;
 	}
