@@ -35,6 +35,7 @@ $ -> Language fix or change
  # [#31412] We can't look what "search results" have searches that are not viewed in first pagination page. Thanks Bojan Nišević
  #+ [#31368] jdoc:include tag fails on type "component" and "head" without space before "/>". Thanks Lu Nguyen
  # [#31711] Cannot delete web site entry for a contact. Thanks Achal Aggarwal
+ + [#31596] Language field improvements + registration language. Thanks Roberto Segura
 
 07-Aug-2013 Jean-Marie Simonet
  $ [#31606] Small typo fix in lang. Thanks Brian Teeman
